# PoncaPrimitiveWithPolyscope

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  line.ply  x_y_z.csv
src/: main.cpp  test.cpp
